# mitre-attack-navigator-layer-builder

./: .gitignore  IDEAS.md  Makefile  README.md  TODO.md  bulk_generate_layers.py  entrypoint.ps1  pyproject.toml  requirements.txt  test.py
docs/: pivot-points.dot
docs/stix2/: attack-pattern.json  x-mitre-tactic.json
examples/data/: attack-pattern--06c00069-771a-4d57-8ef5-d3718c1a8771.json  x-mitre-tactic--2558fd61-8c75-4730-94c4-11926db2a263.json
examples/layers/: fin7.json  fin7.xlsx  heatmap.json  muddywater.json  oilrig.json
examples/layers/enterprise-attack/intrusion_sets/: G0001.json  G0002.json  G0003.json  G0004.json  G0005.json  G0006.json  G0007.json  G0008.json  G0009.json  G0010.json  G0011.json  G0012.json  G0013.json  G0014.json  G0015.json  G0016.json  G0018.json  G0019.json  G0020.json  G0021.json  G0022.json  G0023.json  G0024.json  G0025.json  G0026.json  G0027.json  G0028.json  G0029.json  G0031.json  G0032.json  G0033.json  G0034.json  G0035.json  G0036.json  G0037.json  G0038.json  G0039.json  G0040.json  G0041.json  G0043.json  (+128 more)
examples/layers/enterprise-attack/malware_families/: S0001.json  S0003.json  S0004.json  S0007.json  S0009.json  S0010.json  S0011.json  S0012.json  S0013.json  S0014.json  S0015.json  S0016.json  S0017.json  S0018.json  S0019.json  (+611 more)
mitre_attack_navigator_layer_builder/: analyzer.py  builder.py  cli.py  color_schemes.py  coloring.py  constants.py  io.py  layers.py  loader.py  parsers.py  resolver.py  types.py  util.py
mitre_attack_navigator_layer_builder/types/: layer.py  layer_summary.py
tests/: test_all.py
(+716 files in other folders)
