[tool.poetry]
name = "mitre-attack-navigator-layer-builder"
version = "1.0.0"
description = ""
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
readme = "README.md"
packages = [{include = "mitre_attack_navigator_layer_builder"}]

[tool.poetry.scripts]
tool = "mitre_attack_navigator_layer_builder.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.0"
click = "^8.1.4"
webcolors = "^1.13"
taxii2-client = "^2.3.0"
stix2 = "^3.0.1"
polars = "^1.21.0"
dacite = "^1.9.2"
nearest-colour = "^1.0.0"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
